circleci config with env vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,19 +12,19 @@ jobs:
       - checkout
       - setup_remote_docker
       - aws-cli/setup
-      - aws-ecs/initialize
+      # - aws-ecs/initialize
       - run:
           name: Build and push Docker image
           command: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$CIRCLE_SHA1 -f nodeapp/Dockerfile .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$CIRCLE_SHA1
+            docker build -t $DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1 -f nodeapp/Dockerfile .
+            docker push $DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1
       - aws-ecs/update-service:
-          family: ${ECS_TASK_DEFINITION_FAMILY}
-          cluster: ${ECS_CLUSTER_NAME}
-          container-image-name-updates: ${CONTAINER_NAME}=${ECR_REGISTRY}/${ECR_REPOSITORY}:${CIRCLE_SHA1}
+          family: makinode-app-task
+          cluster: makinode-app-cluster
+          container-image-name-updates: container=${DOCKER_HUB_USERNAME}/makinode-app-circle,tag=$CIRCLE_SHA1
 
 workflows:
   build-and-deploy:
     jobs:
       - build-push-deploy:
-          context: aws-context
+          context: aws-docker-context
