--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - setup_remote_docker
       - aws-cli/setup:
           region: us-east-1
+          role_arn: arn:aws:iam::058264355882:role/ecs-task-execution-role
       - run:
           name: Build and push Docker image
           command: |
