--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,10 @@ jobs:
               '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
 
             # Register the updated task definition
-            aws ecs register-task-definition --cli-input-json file://updated-task-definition.json | jq -r '.taskDefinition.taskDefinitionArn' > task-definition-arn.txt
+            # aws ecs register-task-definition --cli-input-json file://updated-task-definition.json | jq -r '.taskDefinition.taskDefinitionArn' > task-definition-arn.txt
+            TASK_DEFINITION=$(aws ecs register-task-definition --cli-input-json file://updated-task-definition.json)
+            TASK_DEFINITION_ARN=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.taskDefinitionArn')
+            echo $TASK_DEFINITION_ARN > task-definition-arn.txt
 
       - run:
           name: Update ECS Service
