--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,10 +51,32 @@ jobs:
             # TASK_DEFINITION_ARN=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.taskDefinitionArn')
             # echo $TASK_DEFINITION_ARN > task-definition-arn.txt
 
+      - run:
+          name: Update ECS Task Definition
+          command: |
+            # Download the current task definition
+            aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY --output-format json > task-definition.json
+
+            # Extract the container name
+            CONTAINER_NAME=$(jq -r '.containerDefinitions[0].name' task-definition.json)
+
+            # Update the container image in the task definition
+            jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" \
+              '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
+
+            # Register the updated task definition
+            aws ecs register-task-definition \
+              --family $ECS_TASK_DEFINITION_FAMILY \
+              --container-definitions file://updated-task-definition.json \
+              --output-format json | jq -r '.taskDefinition.taskDefinitionArn' > task-definition-arn.txt
+
+      # - aws-ecs/update_task_definition_from_json:
+      #     task_definition_json: updated-task-definition.json
+
       - aws-ecs/update_service:
           family: $ECS_TASK_DEFINITION_FAMILY
           cluster: $ECS_CLUSTER_NAME
-          container_image_name_updates: container="$DOCKER_HUB_USERNAME/makinode-app-circle, tag=$CIRCLE_SHA1"
+          container_image_name_updates: container="$CONTAINER_NAME, tag=$CIRCLE_SHA1"
           # "container=$CONTAINER_NAME,tag=$CIRCLE_SHA1"
 
       # - run:
