removed update task definition from json

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,14 +65,14 @@ jobs:
               '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
 
             # Register the updated task definition
-            # aws ecs register-task-definition \
-            #   --family $ECS_TASK_DEFINITION_FAMILY \
-            #   --container-definitions file://updated-task-definition.json \
-            #   --output text \
-            #   --query 'taskDefinition.taskDefinitionArn' > task-definition-arn.txt
+            aws ecs register-task-definition \
+              --family $ECS_TASK_DEFINITION_FAMILY \
+              --container-definitions file://updated-task-definition.json \
+              --output text \
+              --query 'taskDefinition.taskDefinitionArn' > task-definition-arn.txt
 
-      - aws-ecs/update_task_definition_from_json:
-          task_definition_json: updated-task-definition.json
+      # - aws-ecs/update_task_definition_from_json:
+      #     task_definition_json: updated-task-definition.json
 
       - aws-ecs/update_service:
           family: $ECS_TASK_DEFINITION_FAMILY
