--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   aws-cli: circleci/aws-cli@4.1.3
-  aws-ecs: circleci/aws-ecs@4.0.0
+  # aws-ecs: circleci/aws-ecs@4.0.0
 
 jobs:
   build-push:
