removed update service orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,9 @@ jobs:
             CONTAINER_NAME=$(jq -r '.containerDefinitions[0].name' task-definition.json)
 
             # Update the container image in the task definition
-            jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" \
-              '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
+            # jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" \
+            #   '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
+            echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
 
             # Register the updated task definition
             aws ecs register-task-definition \
