--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,11 +63,11 @@ jobs:
             # Update the container image in the task definition
             # jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" \
             #   '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
-            echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
+            # echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
+            jq --arg image "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" '.containerDefinitions[0].image = $image' task-definition.json > updated-task-definition.json
 
             # Register the updated task definition
             aws ecs register-task-definition \
-              --family $ECS_TASK_DEFINITION_FAMILY \
               --cli-input-json file://updated-task-definition.json \
               --output text \
               --query 'taskDefinition.taskDefinitionArn' > task-definition-arn.txt
@@ -85,7 +85,9 @@ jobs:
           name: Update ECS Service
           command: |
             # Update the ECS service with the new task definition
-            aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $ECS_TASK_DEFINITION_FAMILY
+            # aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $ECS_TASK_DEFINITION_FAMILY
+            # aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
+            aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $(cat task-definition-arn.txt)
             aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
 
 
