--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,82 +14,67 @@ jobs:
       - aws-cli/setup:
           region: us-east-1
           role_arn: arn:aws:iam::058264355882:role/circle-ecs-role
+
+
+      # Build and push Docker image
       - run:
           name: Build and push Docker image
           command: |
             echo $DOCKER_HUB_PASSWORD | docker login -u $DOCKER_HUB_USERNAME --password-stdin
             docker build -t $DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1 -f nodeapp/Dockerfile .
             docker push $DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1
-      # - run:
-          # name: Update ECS Task Definition
-          # command: |
-            # Download the current task definition
-            # aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY --query taskDefinition > task-definition.json
-            # TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY)
-
-            # Update the container image in the task definition
-            # jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/$makinode-app-circle:$CIRCLE_SHA1" \
-            #    '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
-            # echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
-
-            # Register the updated task definition
-            # aws ecs register-task-definition --family $ECS_TASK_DEFINITION_FAMILY --cli-input-json file://updated-task-definition.json
-
+      
+      ### Try 1:
+      # # Download, Update, and Register ECS Task Definition
       # - run:
       #     name: Update ECS Task Definition
       #     command: |
       #       # Download the current task definition
       #       aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY --query 'taskDefinition' > task-definition.json
 
+      #       # Extract the container name
+      #       CONTAINER_NAME=$(jq -r '.containerDefinitions[0].name' task-definition.json)
+
       #       # Update the container image in the task definition
-      #       jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/$makinode-app-circle:$CIRCLE_SHA1" \
-      #         '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
+      #       jq --arg image "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" '.containerDefinitions[0].image = $image' task-definition.json > updated-task-definition.json
 
-            # Register the updated task definition
-            # aws ecs register-task-definition --cli-input-json file://updated-task-definition.json | jq -r '.taskDefinition.taskDefinitionArn' > task-definition-arn.txt
-            # TASK_DEFINITION=$(aws ecs register-task-definition --cli-input-json file://updated-task-definition.json)
-            # TASK_DEFINITION_ARN=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.taskDefinitionArn')
-            # echo $TASK_DEFINITION_ARN > task-definition-arn.txt
+      #       # Register the updated task definition
+      #       aws ecs register-task-definition \
+      #         --cli-input-json file://updated-task-definition.json \
+      #         --output text \
+      #         --query 'taskDefinition.taskDefinitionArn' > task-definition-arn.txt
 
+      # # Update ECS Service
+      # - run:
+      #     name: Update ECS Service
+      #     command: |
+      #       # Update the ECS service with the new task definition
+      #       aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $(cat task-definition-arn.txt)
+      #       aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
+
+
+
+      ### Try 2:
+      # Download, Update, and Register ECS Task Definition
       - run:
           name: Update ECS Task Definition
           command: |
             # Download the current task definition
-            aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY --query 'taskDefinition' > task-definition.json
-
-            # Extract the container name
-            CONTAINER_NAME=$(jq -r '.containerDefinitions[0].name' task-definition.json)
+            TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY)
 
             # Update the container image in the task definition
-            # jq --arg CONTAINER_IMAGE "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" \
-            #   '.containerDefinitions[0].image = $CONTAINER_IMAGE' task-definition.json > updated-task-definition.json
-            # echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
-            jq --arg image "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" '.containerDefinitions[0].image = $image' task-definition.json > updated-task-definition.json
+            echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
 
             # Register the updated task definition
-            aws ecs register-task-definition \
-              --cli-input-json file://updated-task-definition.json \
-              --output text \
-              --query 'taskDefinition.taskDefinitionArn' > task-definition-arn.txt
+            aws ecs register-task-definition --family $ECS_TASK_DEFINITION_FAMILY --cli-input-json file://updated-task-definition.json
 
-      # - aws-ecs/update_task_definition_from_json:
-      #     task_definition_json: updated-task-definition.json
-
-      # - aws-ecs/update_service:
-      #     family: $ECS_TASK_DEFINITION_FAMILY
-      #     cluster: $ECS_CLUSTER_NAME
-      #     container_image_name_updates: container="$CONTAINER_NAME, tag=$CIRCLE_SHA1"
-      #     # "container=$CONTAINER_NAME,tag=$CIRCLE_SHA1"
-
+        # Update ECS Service
       - run:
           name: Update ECS Service
           command: |
             # Update the ECS service with the new task definition
-            # aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $ECS_TASK_DEFINITION_FAMILY
-            # aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
-            aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $(cat task-definition-arn.txt)
+            aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $ECS_TASK_DEFINITION_FAMILY
             aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
-
 
 workflows:
   build-and-push:
