--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs:
   aws-cli: circleci/aws-cli@4.1.3
-  # aws-ecs: circleci/aws-ecs@4.0.0
 
 jobs:
   build-push:
@@ -15,7 +14,6 @@ jobs:
           region: us-east-1
           role_arn: arn:aws:iam::058264355882:role/circle-ecs-role
 
-
       # Build and push Docker image
       - run:
           name: Build and push Docker image
@@ -23,57 +21,29 @@ jobs:
             echo $DOCKER_HUB_PASSWORD | docker login -u $DOCKER_HUB_USERNAME --password-stdin
             docker build -t $DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1 -f nodeapp/Dockerfile .
             docker push $DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1
-      
-      ### Try 1:
-      # # Download, Update, and Register ECS Task Definition
-      # - run:
-      #     name: Update ECS Task Definition
-      #     command: |
-      #       # Download the current task definition
-      #       aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION_FAMILY --query 'taskDefinition' > task-definition.json
 
-      #       # Extract the container name
-      #       CONTAINER_NAME=$(jq -r '.containerDefinitions[0].name' task-definition.json)
-
-      #       # Update the container image in the task definition
-      #       jq --arg image "$DOCKER_HUB_USERNAME/makinode-app-circle:$CIRCLE_SHA1" '.containerDefinitions[0].image = $image' task-definition.json > updated-task-definition.json
-
-      #       # Register the updated task definition
-      #       aws ecs register-task-definition \
-      #         --cli-input-json file://updated-task-definition.json \
-      #         --output text \
-      #         --query 'taskDefinition.taskDefinitionArn' > task-definition-arn.txt
-
-      # # Update ECS Service
-      # - run:
-      #     name: Update ECS Service
-      #     command: |
-      #       # Update the ECS service with the new task definition
-      #       aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $(cat task-definition-arn.txt)
-      #       aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
-
-
-
-      ### Try 2:
       # Download, Update, and Register ECS Task Definition
       - run:
           name: Update ECS Task Definition
           command: |
+            # Get the latest revision of the task definition
+            LATEST_REVISION=$(aws ecs list-task-definitions --family-prefix $ECS_TASK_DEFINITION_FAMILY --sort DESC --max-items 1 --query 'taskDefinitionArns[0]' --output text)
+
             # Download the current task definition
-            TASK_DEFINITION=$(aws ecs describe-task-definition --family $ECS_TASK_DEFINITION_FAMILY)
+            TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $LATEST_REVISION)
 
             # Update the container image in the task definition
             echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"' > updated-task-definition.json
 
             # Register the updated task definition
-            aws ecs register-task-definition --family $ECS_TASK_DEFINITION_FAMILY --cli-input-json file://updated-task-definition.json
+            aws ecs register-task-definition --cli-input-json file://updated-task-definition.json
 
-        # Update ECS Service
+      # Update ECS Service
       - run:
           name: Update ECS Service
           command: |
             # Update the ECS service with the new task definition
-            aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --family $ECS_TASK_DEFINITION_FAMILY
+            aws ecs update-service --cluster $ECS_CLUSTER_NAME --service $ECS_SERVICE_NAME --task-definition $LATEST_REVISION
             aws ecs wait services-stable --cluster $ECS_CLUSTER_NAME --services $ECS_SERVICE_NAME
 
 workflows:
