--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
           name: Update ECS Task Definition
           command: |
             # Get the latest revision of the task definition
-            LATEST_REVISION=$(aws ecs list-task-definitions --family-prefix $ECS_TASK_DEFINITION_FAMILY --sort DESC --max-items 1 --query 'taskDefinitionArns[0]' --output text)
+            # LATEST_REVISION=$(aws ecs list-task-definitions --family-prefix $ECS_TASK_DEFINITION_FAMILY --sort DESC --max-items 1 --query 'taskDefinitionArns[0]' --output text)
+            LATEST_REVISION=$(aws ecs list-task-definitions --family-prefix $ECS_TASK_DEFINITION_FAMILY --sort-order DESCENDING --max-items 1 | jq -r '.taskDefinitionArns[0]')
 
             # Download the current task definition
             TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $LATEST_REVISION)
