--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,19 +51,19 @@ jobs:
             UPDATED_CONTAINER_DEF=$(echo $TASK_DEFINITION | jq '.containerDefinitions[0].image = "'$DOCKER_HUB_USERNAME'/makinode-app-circle:'$CIRCLE_SHA1'"')
 
             # Create the updated task definition JSON
-            # NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --argjson updated_container_def "$UPDATED_CONTAINER_DEF" '.containerDefinitions = $updated_container_def')
-            NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --argjson updated_container_def "$UPDATED_CONTAINER_DEF" '{ 
-              "family": $TASK_DEFINITION_FAMILY,
-              "taskRoleArn": .taskRoleArn,
-              "executionRoleArn": .executionRoleArn,
-              "networkMode": .networkMode,
-              "containerDefinitions": $updated_container_def,
-              "volumes": .volumes,
-              "placementConstraints": .placementConstraints,
-              "requiresCompatibilities": .requiresCompatibilities,
-              "cpu": .cpu,
-              "memory": .memory
-            }')
+            NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --argjson updated_container_def "$UPDATED_CONTAINER_DEF" '.containerDefinitions = $updated_container_def')
+            # NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --argjson updated_container_def "$UPDATED_CONTAINER_DEF" '{ 
+            #   "family": $TASK_DEFINITION_FAMILY,
+            #   "taskRoleArn": .taskRoleArn,
+            #   "executionRoleArn": .executionRoleArn,
+            #   "networkMode": .networkMode,
+            #   "containerDefinitions": $updated_container_def,
+            #   "volumes": .volumes,
+            #   "placementConstraints": .placementConstraints,
+            #   "requiresCompatibilities": .requiresCompatibilities,
+            #   "cpu": .cpu,
+            #   "memory": .memory
+            # }')
 
             # Register the updated task definition
             aws ecs register-task-definition --cli-input-json "$NEW_TASK_DEFINITION" --family $TASK_DEFINITION_FAMILY
